change URL of header image

--- a/web/app/themes/catch-gare2/style.css
+++ b/web/app/themes/catch-gare2/style.css
@@ -100,7 +100,7 @@ h4{
 
 #masthead{
     background-color: white;
-    background-image: url('http://178.62.64.58/app/uploads/2015/11/gares3.png');
+    background-image: url('http://vivregaresnord-est.fr/wp-content/uploads/2015/11/gares3.png');
     background-repeat: no-repeat;
     background-position: top center;
     background-attachment: fixed;
